--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
     "next": "10.0.5",
     "react": "^17.0.1",
     "react-dom": "17.0.1"
