--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "jsonwebtoken": "^8.5.1"
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "typescript": "^4.1.3"
   }
 }
