--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "next": "10.0.5",
     "react": "^17.0.1",
     "react-dom": "17.0.1"
