--- a/app/package.json
+++ b/app/package.json
@@ -8,13 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
     "crypto": "^1.0.1",
-    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "next": "10.0.5",
     "react": "^17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.15.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
