--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "next": "10.0.5",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1"
