--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/api/index.js"  ],
+, "pages/api/index.js", "pages/api/signature.ts"  ],
   "exclude": [
     "node_modules"
   ]
