--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "fs": "0.0.1-security"
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
+    "fs": "0.0.1-security",
+    "typescript": "^4.1.5"
   }
 }
